# tacrad

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: DropShadow.h  HorizontalBar.h  InteractableProgressBar.h  MusicPlayer.cpp  MusicPlayer.h  NanoVGContext.h  RunningTime.h  TacradCLI.cpp  TacradCLI.h  TrackInteractionButton.h  VolumeButton.h  main.cpp  raw.githubusercontent.com_mackron_miniaudio_master_miniaudio.hZone.Identifier
